R18 Phase 5c: -parameters-missing diagnostic + plan-body update + R90 follow-up
Closes A3 ("--parameters propagation for service hover") and records
the Phase 5 design decisions in the R18 plan body. Phase 5 ships;
remaining R18 work is Phase 7 (Rust LSP retirement + IntrospectMojo
deletion).

Implementation:
- ClasspathScanner now sets `Parameter.name = null` when the .class's
  MethodParameters attribute is absent (mirroring the existing
  CompletionData.Parameter contract: null means "consumer compiled
  without -parameters"). The previous "argN" placeholder fell through
  to the LSP, hiding the detection signal.
- Hovers `formatMethod` substitutes "argN" at display time when name
  is null (so the signature still reads cleanly) and appends a
  "_Parameter names are unavailable; recompile with -parameters_"
  hint to the hover content.
- MethodCompletions `formatSignature` substitutes "argN" at display
  time as well, so completion-detail strings are stable.
- Diagnostics emits a per-reference Warning on each @service /
  @condition directive whose resolved method has parameters but
  every parameter name is null. Severity: Warning, not Error — this
  is a quality-of-life issue, not a correctness one. Mirrors
  ServiceCatalog.emitParametersWarning's build-time output;
  per-reference rather than once-per-build because LSP diagnostics
  pin to source ranges.

Plan body:
- R18 Status: Phase 5 + Phase 6 marked Done with commit anchors;
  plan body trimmed of JavaParser-driven design (Javadoc, per-line
  refinement, @externalField source-walk) which deferred to a new
  follow-up roadmap item. Test-suite line updated to reflect the
  Phase 5 additions.
- Scope boundaries: shipped vs. remaining vs. out-of-scope split,
  with the JavaParser surface explicitly out of scope on R18 and
  pointing at the follow-up.
- A3 closed.

Roadmap:
- New R90 (`lsp-javaparser-javadoc-and-definitions.md`, Backlog)
  records the deferred Javadoc / per-line / @externalField work
  with th